--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
   <section id="about-section">
       <div class="about-txt-ctn">
         <h1 class="about-header" data-aos="fade-down">&nbsp;About ECloud<span>WORX</span></h1>
+        <!-- 
         <p class="about-subtitle" data-aos="fade-up">Ecloudworx is a leading Company providing Cloud Services and solutions that provide a range of customer-centric, cloud native and hybrid services working best for your infrastructure. With a reservoir of experience behind us and a high amount of expertise, we have it in us to render your ideas a tangible reality.</p>
+        -->
+        <p class="about-subtitle" data-aos="fade-up">Comprehensive IVR and Contact Center Solutions
+We provide advanced IVR solutions, integrating multilingual voice recordings and seamless system data integration for enhanced caller identification and authentication. Our solutions include priority caller management, automated call handling, dynamic announcements, and intelligent call surveys, ensuring efficient and high-quality service.</p>
       </div>
   </section>
 
@@ -130,13 +134,13 @@
             <i class="fa fa-twitter"></i>
             Twitter
         </a>
-        <a href="#" data-aos="flip-left">
+        <a href="mailto:contactus@ecloudworx.com" data-aos="flip-left">
             <i class="fa fa-at"></i>
-            Send a mail
+            contactus@ecloudworx.com
         </a>
         <a href="#" data-aos="flip-right">
             <i class="fa fa-phone"></i>
-            Call me
+            Call Us
         </a>
     </div>
 </section>
