--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ We provide advanced IVR solutions, integrating multilingual voice recordings and
         </a>
         <a href="mailto:contactus@ecloudworx.com" data-aos="flip-left">
             <i class="fa fa-at"></i>
-            contactus@ecloudworx.com
+            Send an Email
         </a>
         <a href="#" data-aos="flip-right">
             <i class="fa fa-phone"></i>
